started avis section, fixed background coloring bug, added more spacing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,7 +23,7 @@ html {
 }
 
 body {
-  background: white;
+  background-color: #f4f4f5;
   color: black;
 }
 
